Fix bg imgae jumps on scrolling mobile

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -38,7 +38,6 @@ body{
   right: 0;
   bottom: 0;
   width: 100%;
-  min-height: 100vh;
   z-index: -1;
   background: url('../img/doctor-bg-img.jpeg') #555 no-repeat center;
   background-size: cover;
